# Release-Automator

./: .gitignore  .mailmap  AGENTS.md  README.md  SECURITY.md  action.yml  pyproject.toml
.github/workflows/: release-automator-execute.yml  release-automator-plan.yml  release-automator-resume.yml  tests.yml
docs/: github-actions.md  usage.md
examples/: media-atlas.toml  python-project.toml
examples/consumer-workflows/: release-automator-execute.yml  release-automator-plan.yml  release-automator-resume.yml  release-automator.toml
scripts/: action_runner.py
src/release_automator/: __init__.py  __main__.py  bundle.py  cli.py  config.py  errors.py  git_ops.py  github_api.py  models.py  openai_planner.py  security.py  state.py  versioning.py  workflow.py
tests/: conftest.py  test_action_runner.py  test_action_templates.py  test_browser_free_contract.py  test_bundle.py  test_cli.py  test_config.py  test_execution.py  test_git_ops.py  test_github_api.py  test_planning.py  test_security.py  test_versioning.py
