[project]
name = "release-automator"
version = "0.1.2"
description = "Plan, approve, and execute deterministic GitHub publication workflows with OpenAI-assisted metadata."
readme = "README.md"
requires-python = ">=3.12"
license = "Apache-2.0"
dependencies = [
  "httpx>=0.28.1",
  "openai>=1.68.0",
  "pydantic>=2.10.0",
  "rich>=13.9.0",
  "typer>=0.15.0",
]

[project.scripts]
release-automator = "release_automator.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
  "pyright>=1.1.390",
  "pytest>=8.3.0",
  "pytest-cov>=6.0.0",
  "respx>=0.22.0",
  "ruff>=0.9.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/release_automator"]

[tool.pytest.ini_options]
addopts = "-q --strict-markers"
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "standard"
include = ["src", "tests"]
